--- a/index-ar.html
+++ b/index-ar.html
@@ -38,6 +38,9 @@
         </div>
     </header>
     <div class="landing-page p-rel ">
+        <img class="landing-bg1 p-abs" src="./IMGS/moroccan shape.png" alt="">
+        <img class="landing-bg2 p-abs" src="./IMGS/moroccan shape.png" alt="">
+        <img class="landing-bg3 p-abs" src="./IMGS/moroccan shape.png" alt="">
         <div class="simple-info flex-center">
             <div class="simple-intro txt-center">
                 <div class="name mb-10">
@@ -60,9 +63,13 @@
                 </div>
                 <a class="more mb-20" href="aboutMe.html">اقرأ المزيد</a>
             </div>
-            <div class="simple-img p-rel">
+            <div class="simple-img ">
+                <img class="me" src="./IMGS/me2.png" alt="">
             </div>
         </div>
+        <a href="#projects" class="menu-angles" title="اذهب للأسفل">
+            <i class="fa-solid fa-angles-down p-abs"></i>
+        </a>
     </div>
 </body>
 
