--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         </div>
     </header>
     <div class="landing-page p-rel">
+        <img class="landing-bg1 p-abs" src="./IMGS/moroccan shape.png" alt="">
+        <img class="landing-bg2 p-abs" src="./IMGS/moroccan shape.png" alt="">
+        <img class="landing-bg3 p-abs" src="./IMGS/moroccan shape.png" alt="">
         <div class="simple-info flex-center">
             <div class="simple-intro txt-center">
                 <div class="name mb-10">
@@ -58,11 +61,15 @@
                         <i class="fa-brands fa-youtube"></i>
                     </a>
                 </div>
-                <a class="more mb-20" href="aboutMe.html">read more</a>
+                <a class="more" href="aboutMe.html">read more</a>
             </div>
-            <div class="simple-img p-rel">
+            <div class="simple-img ">
+                <img class="me" src="./IMGS/me2.png" alt="">
             </div>
         </div>
+        <a href="#projects" class="menu-angles" title="Go Down">
+            <i class="fa-solid fa-angles-down p-abs"></i>
+        </a>
     </div>
 </body>
 
