--- a/index-ar.html
+++ b/index-ar.html
@@ -34,7 +34,12 @@
                     <li><a href="#about">حول</a></li>
                 </ul>
             </nav>
-            <a  class="lang-change p-abs flex-center fs-10 br-circle" href="./index.html" title="ترجم الصفحة الى الانجليزية">انج</a>
+            <div class="header-btns p-abs d-flex">
+                <a  class="search-bar flex-center fs-10 br-circle" href="#search-bar" title="اذهب الى محرك البحث">
+                    <div class="i fa-solid fa-search"></div>
+                </a>
+                <a  class="lang-change flex-center fs-10 br-circle" href="./index.html" title="ترجم الصفحة الى الانجليزية">انج</a>
+            </div>
         </div>
     </header>
     <div class="landing-page p-rel ">
@@ -71,6 +76,70 @@
             <i class="fa-solid fa-angles-down p-abs"></i>
         </a>
     </div>
+    <main class="p-rel bg-white">
+        <section class="projects p-20" id="projects">
+            <div class="container">
+                <h1 class="sec-title">مشاريع</h1>
+                <div class="projects-holder">
+                    <div class="project " style="background-image: url(./IMGS/leon-pre.png);">
+                        <div class="project-title p-abs c-white ">
+                            <h1>المشروع الأول</h1>
+                            <h2>leon</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green" href="">معلومات</a>
+                            <a class="preview btn-shape bg-blue" href="">معاينة</a>
+                        </div>                    </div>
+                    <div class="project " style="background-image: url(./IMGS/kasper-pre.png);" >
+                        <div class="project-title p-abs c-white">
+                            <h1>المشروع الثاني</h1>
+                            <h2>leon</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green" href="">معلومات</a>
+                            <a class="preview btn-shape bg-blue" href="">معاينة</a>
+                        </div>                    </div>
+                    <div class="project " style="background-image: url(./IMGS/talib-pre.png);" >
+                        <div class="project-title p-abs c-white">
+                            <h1>المشروع الثالث</h1>
+                            <h2>leon</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green" href="">معلومات</a>
+                            <a class="preview btn-shape bg-blue" href="">معاينة</a>
+                        </div>                    </div>
+                    <div class="project " style="background-image: url(./IMGS/dash-pre.png);" >
+                        <div class="project-title p-abs c-white">
+                            <h1>المشروع الرابع</h1>
+                            <h2>leon</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green" href="">معلومات</a>
+                            <a class="preview btn-shape bg-blue" href="">معاينة</a>
+                        </div>                    </div>
+                    <div class="project " style="background-image: url(./IMGS/product-pre.png);" >
+                        <div class="project-title p-abs c-white">
+                            <h1>المشروع الخامس</h1>
+                            <h2>leon</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green" href="">معلومات</a>
+                            <a class="preview btn-shape bg-blue" href="">معاينة</a>
+                        </div>                    </div>
+                    <div class="project"  style="background-image: url(./IMGS/ot-pre.png);" >
+                        <div class="project-title p-abs c-white">
+                            <h1>المشروع السادس</h1>
+                            <h2>leon</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green" href="">معلومات</a>
+                            <a class="preview btn-shape bg-blue" href="">معاينة</a>
+                        </div>                    </div>
+                 </div>
+                 <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block " href="project-page.html">شاهد المزيد</a>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
