--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body class="both eng">
-    <header class="p-abs ">
+    <header class="p-abs">
         <div class="container flex-center p-rel">
             <a class="logo" href="./index.html">ot</a>
             <nav class="flex-center">
@@ -34,10 +34,15 @@
                     <li><a href="#about">about</a></li>
                 </ul>
             </nav>
-            <a  class="lang-change p-abs flex-center fs-10 br-circle" href="./index-ar.html" title="Translate To Arabic">ar</a>
+            <div class="header-btns p-abs d-flex">
+                    <a  class="search-bar flex-center fs-10 br-circle" href="#search-bar" title="Go to search bar">
+                        <div class="i fa-solid fa-search"></div>
+                    </a>
+                    <a  class="lang-change flex-center fs-10 br-circle" href="./index-ar.html" title="Translate To Arabic">ar</a>
+            </div>
         </div>
     </header>
-    <div class="landing-page p-rel">
+    <div class="landing-page">
         <img class="landing-bg1 p-abs" src="./IMGS/moroccan shape.png" alt="">
         <img class="landing-bg2 p-abs" src="./IMGS/moroccan shape.png" alt="">
         <img class="landing-bg3 p-abs" src="./IMGS/moroccan shape.png" alt="">
@@ -67,10 +72,75 @@
                 <img class="me" src="./IMGS/me2.png" alt="">
             </div>
         </div>
-        <a href="#projects" class="menu-angles" title="Go Down">
+        <a href="#projects" class="menu-angles" title="Down">
             <i class="fa-solid fa-angles-down p-abs"></i>
         </a>
     </div>
+    <main class="p-rel bg-white">
+        <section class="projects p-20" id="projects">
+            <div class="container">
+                <h1 class="sec-title">projects</h1>
+                <div class="projects-holder">
+                    <div class="project p-rel " style="background-image: url(./IMGS/leon-pre.png);">
+                        <div class="project-title p-abs c-white ">
+                            <h1>project one</h1>
+                            <h2>leon</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green" href="">info</a>
+                            <a class="preview btn-shape bg-blue" href="">preview</a>
+                        </div>
+                    </div>
+                    <div class="project " style="background-image: url(./IMGS/kasper-pre.png);">
+                        <div class="project-title p-abs c-white">
+                            <h1>project one</h1>
+                            <h2>leon</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green" href="">info</a>
+                            <a class="preview btn-shape bg-blue" href="">preview</a>
+                        </div>                    </div>
+                    <div class="project " style="background-image: url(./IMGS/talib-pre.png);">
+                        <div class="project-title p-abs c-white">
+                            <h1>project one</h1>
+                            <h2>leon</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green" href="">info</a>
+                            <a class="preview btn-shape bg-blue" href="">preview</a>
+                        </div>                    </div>
+                    <div class="project " style="background-image: url(./IMGS/dash-pre.png);">
+                        <div class="project-title p-abs c-white">
+                            <h1>project one</h1>
+                            <h2>leon</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green" href="">info</a>
+                            <a class="preview btn-shape bg-blue" href="">preview</a>
+                        </div>                    </div>
+                    <div class="project " style="background-image: url(./IMGS/product-pre.png);">
+                        <div class="project-title p-abs c-white">
+                            <h1>project one</h1>
+                            <h2>leon</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green" href="">info</a>
+                            <a class="preview btn-shape bg-blue" href="">preview</a>
+                        </div>                    </div>
+                    <div class="project"  style="background-image: url(./IMGS/ot-pre.png);">
+                        <div class="project-title p-abs c-white">
+                            <h1>project one</h1>
+                            <h2>leon</h2>
+                        </div>
+                        <div class="project-btns">
+                            <a class="info btn-shape bg-green" href="">info</a>
+                            <a class="preview btn-shape bg-blue" href="">preview</a>
+                        </div>                    </div>
+                 </div>
+                 <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block " href="project-page.html">see more</a>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
