--- a/index.html
+++ b/index.html
@@ -81,61 +81,62 @@
             <div class="container">
                 <h1 class="sec-title">projects</h1>
                 <div class="projects-holder">
-                    <div class="project p-rel " style="background-image: url(./IMGS/leon-pre.png);">
+                    <div class="project" style="background-image: url(./IMGS/leon-pre.png);">
                         <div class="project-title p-abs c-white ">
                             <h1>project one</h1>
                             <h2>leon</h2>
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">info</a>
-                            <a class="preview btn-shape bg-blue" href="">preview</a>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-01-leon/" target="_blank">preview</a>
                         </div>
                     </div>
                     <div class="project " style="background-image: url(./IMGS/kasper-pre.png);">
                         <div class="project-title p-abs c-white">
-                            <h1>project one</h1>
-                            <h2>leon</h2>
+                            <h1>project two</h1>
+                            <h2>kasper</h2>
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">info</a>
-                            <a class="preview btn-shape bg-blue" href="">preview</a>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-02-Kaspr/" target="_blank">preview</a>
                         </div>                    </div>
                     <div class="project " style="background-image: url(./IMGS/talib-pre.png);">
                         <div class="project-title p-abs c-white">
-                            <h1>project one</h1>
-                            <h2>leon</h2>
+                            <h1>project three</h1>
+                            <h2>talib</h2>
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">info</a>
-                            <a class="preview btn-shape bg-blue" href="">preview</a>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-03-Elzero/" target="_blank">preview</a>
                         </div>                    </div>
                     <div class="project " style="background-image: url(./IMGS/dash-pre.png);">
                         <div class="project-title p-abs c-white">
-                            <h1>project one</h1>
-                            <h2>leon</h2>
+                            <h1>project four</h1>
+                            <h2>dashboard</h2>
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">info</a>
-                            <a class="preview btn-shape bg-blue" href="">preview</a>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-04-Dashboard/" target="_blank">preview</a>
                         </div>                    </div>
                     <div class="project " style="background-image: url(./IMGS/product-pre.png);">
                         <div class="project-title p-abs c-white">
-                            <h1>project one</h1>
-                            <h2>leon</h2>
+                            <h1>project five</h1>
+                            <h2>product preview</h2>
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">info</a>
-                            <a class="preview btn-shape bg-blue" href="">preview</a>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Product-Preview-Challenge/" target="_blank">preview</a>
                         </div>                    </div>
                     <div class="project"  style="background-image: url(./IMGS/ot-pre.png);">
                         <div class="project-title p-abs c-white">
-                            <h1>project one</h1>
-                            <h2>leon</h2>
+                            <h1>project six</h1>
+                            <h2>ot</h2>
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">info</a>
-                            <a class="preview btn-shape bg-blue" href="">preview</a>
-                        </div>                    </div>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/OT/" target="_blank" >preview</a>
+                        </div>                    
+                    </div>
                  </div>
                  <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block " href="project-page.html">see more</a>
             </div>
