--- a/index-ar.html
+++ b/index-ar.html
@@ -88,52 +88,52 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">معلومات</a>
-                            <a class="preview btn-shape bg-blue" href="">معاينة</a>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-01-leon/" target="_blank">معاينة</a>
                         </div>                    </div>
                     <div class="project " style="background-image: url(./IMGS/kasper-pre.png);" >
                         <div class="project-title p-abs c-white">
                             <h1>المشروع الثاني</h1>
-                            <h2>leon</h2>
+                            <h2>kasper</h2>
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">معلومات</a>
-                            <a class="preview btn-shape bg-blue" href="">معاينة</a>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-02-Kaspr/" target="_blank">معاينة</a>
                         </div>                    </div>
                     <div class="project " style="background-image: url(./IMGS/talib-pre.png);" >
                         <div class="project-title p-abs c-white">
                             <h1>المشروع الثالث</h1>
-                            <h2>leon</h2>
+                            <h2>talib</h2>
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">معلومات</a>
-                            <a class="preview btn-shape bg-blue" href="">معاينة</a>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-03-Elzero/" target="_blank">معاينة</a>
                         </div>                    </div>
                     <div class="project " style="background-image: url(./IMGS/dash-pre.png);" >
                         <div class="project-title p-abs c-white">
                             <h1>المشروع الرابع</h1>
-                            <h2>leon</h2>
+                            <h2>dashboard</h2>
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">معلومات</a>
-                            <a class="preview btn-shape bg-blue" href="">معاينة</a>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-04-Dashboard/" target="_blank">معاينة</a>
                         </div>                    </div>
                     <div class="project " style="background-image: url(./IMGS/product-pre.png);" >
                         <div class="project-title p-abs c-white">
                             <h1>المشروع الخامس</h1>
-                            <h2>leon</h2>
+                            <h2>product preview</h2>
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">معلومات</a>
-                            <a class="preview btn-shape bg-blue" href="">معاينة</a>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Product-Preview-Challenge/" target="_blank">معاينة</a>
                         </div>                    </div>
                     <div class="project"  style="background-image: url(./IMGS/ot-pre.png);" >
                         <div class="project-title p-abs c-white">
                             <h1>المشروع السادس</h1>
-                            <h2>leon</h2>
+                            <h2>ot</h2>
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">معلومات</a>
-                            <a class="preview btn-shape bg-blue" href="">معاينة</a>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/OT/" target="_blank">معاينة</a>
                         </div>                    </div>
                  </div>
                  <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block " href="project-page.html">شاهد المزيد</a>
