--- a/index-ar.html
+++ b/index-ar.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+    content="OT  الموفع الرسمي الخاص بأسامة الطالب على الأنترنيت الذي يحتوي على كل المعلومات الخاصة به, مشاريعه, خدماته, مهاراته, و خبرته في الحياة و الأعمال..">
     <!-- GOOGLE FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -66,7 +68,7 @@
                         <i class="fa-brands fa-youtube"></i>
                     </a>
                 </div>
-                <a class="more mb-20" href="aboutMe.html">اقرأ المزيد</a>
+                <a class="more mb-20" href="aboutMe.html" title="اضغط هنا لمعرفت المزيد حول أسامة">اقرأ المزيد</a>
             </div>
             <div class="simple-img ">
                 <img class="me" src="./IMGS/me2.png" alt="">
@@ -136,7 +138,7 @@
                             <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/OT/" target="_blank">معاينة</a>
                         </div>                    </div>
                  </div>
-                 <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block " href="project-page.html">شاهد المزيد</a>
+                 <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block " href="project-page.html" title="اضغط هنا لمشاهدة المزيد من المشاريع">شاهد المزيد</a>
             </div>
         </section>
     </main>
