--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="OT Is The Official Personnal Website For OUSSAMA ET-TALIB On 
+        The Web Which Have All Of Imformation About OUSSAMA, His Projects, 
+        Services, Skills, And His life and bussiness Experience.">
     <!-- GOOGLE FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,10 +39,11 @@
                 </ul>
             </nav>
             <div class="header-btns p-abs d-flex">
-                    <a  class="search-bar flex-center fs-10 br-circle" href="#search-bar" title="Go to search bar">
-                        <div class="i fa-solid fa-search"></div>
-                    </a>
-                    <a  class="lang-change flex-center fs-10 br-circle" href="./index-ar.html" title="Translate To Arabic">ar</a>
+                <a class="search-bar flex-center fs-10 br-circle" href="#search-bar" title="Go to search bar">
+                    <div class="i fa-solid fa-search"></div>
+                </a>
+                <a class="lang-change flex-center fs-10 br-circle" href="./index-ar.html"
+                    title="Translate To Arabic">ar</a>
             </div>
         </div>
     </header>
@@ -66,7 +71,7 @@
                         <i class="fa-brands fa-youtube"></i>
                     </a>
                 </div>
-                <a class="more" href="aboutMe.html">read more</a>
+                <a class="more" href="aboutMe.html" title="Click This To Know More About OUSSAMA ">read more</a>
             </div>
             <div class="simple-img ">
                 <img class="me" src="./IMGS/me2.png" alt="">
@@ -88,7 +93,8 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">info</a>
-                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-01-leon/" target="_blank">preview</a>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-01-leon/"
+                                target="_blank">preview</a>
                         </div>
                     </div>
                     <div class="project " style="background-image: url(./IMGS/kasper-pre.png);">
@@ -98,8 +104,10 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">info</a>
-                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-02-Kaspr/" target="_blank">preview</a>
-                        </div>                    </div>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-02-Kaspr/"
+                                target="_blank">preview</a>
+                        </div>
+                    </div>
                     <div class="project " style="background-image: url(./IMGS/talib-pre.png);">
                         <div class="project-title p-abs c-white">
                             <h1>project three</h1>
@@ -107,8 +115,10 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">info</a>
-                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-03-Elzero/" target="_blank">preview</a>
-                        </div>                    </div>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-03-Elzero/"
+                                target="_blank">preview</a>
+                        </div>
+                    </div>
                     <div class="project " style="background-image: url(./IMGS/dash-pre.png);">
                         <div class="project-title p-abs c-white">
                             <h1>project four</h1>
@@ -116,8 +126,10 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">info</a>
-                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-04-Dashboard/" target="_blank">preview</a>
-                        </div>                    </div>
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Template-04-Dashboard/"
+                                target="_blank">preview</a>
+                        </div>
+                    </div>
                     <div class="project " style="background-image: url(./IMGS/product-pre.png);">
                         <div class="project-title p-abs c-white">
                             <h1>project five</h1>
@@ -125,20 +137,24 @@
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">info</a>
-                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/Product-Preview-Challenge/" target="_blank">preview</a>
-                        </div>                    </div>
-                    <div class="project"  style="background-image: url(./IMGS/ot-pre.png);">
+                            <a class="preview btn-shape bg-blue"
+                                href="https://easy-c.github.io/Product-Preview-Challenge/" target="_blank">preview</a>
+                        </div>
+                    </div>
+                    <div class="project" style="background-image: url(./IMGS/ot-pre.png);">
                         <div class="project-title p-abs c-white">
                             <h1>project six</h1>
                             <h2>ot</h2>
                         </div>
                         <div class="project-btns">
                             <a class="info btn-shape bg-green" href="">info</a>
-                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/OT/" target="_blank" >preview</a>
-                        </div>                    
+                            <a class="preview btn-shape bg-blue" href="https://easy-c.github.io/OT/"
+                                target="_blank">preview</a>
+                        </div>
                     </div>
-                 </div>
-                 <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block " href="project-page.html">see more</a>
+                </div>
+                <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block " href="project-page.html" title="Click This To See More Projects">see
+                    more</a>
             </div>
         </section>
     </main>
