--- a/index-ar.html
+++ b/index-ar.html
@@ -31,8 +31,8 @@
                 </div>
                 <ul class="flex-center main-transition">
                     <li><a href="#">الرئيسة</a></li>
-                    <li><a href="#projects">مشاريع</a></li>
-                    <li><a href="#services">خدمات</a></li>
+                    <li><a href="#projects">المشاريع</a></li>
+                    <li><a href="#services">الخدمات</a></li>
                     <li><a href="#about">حول</a></li>
                 </ul>
             </nav>
@@ -58,13 +58,13 @@
                     مطور صفحات الويب
                 </div>
                 <div class="social-links mb-20">
-                    <a href="">
+                    <a href="https://www.facebook.com/profile.php?id=100010035220125" target="_blank">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
-                    <a href="">
+                    <a href="https://www.instagram.com/oussama_talib.8/" target="_blank">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="">
+                    <a href="https://www.youtube.com/@OussamaTalib.GameOver/featured" target="_blank">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
                 </div>
@@ -81,7 +81,7 @@
     <main class="p-rel bg-white">
         <section class="projects p-20" id="projects">
             <div class="container">
-                <h1 class="sec-title">مشاريع</h1>
+                <h1 class="sec-title">المشاريع</h1>
                 <div class="projects-holder">
                     <div class="project " style="background-image: url(./IMGS/leon-pre.png);">
                         <div class="project-title p-abs c-white ">
@@ -141,6 +141,44 @@
                  <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block " href="project-page.html" title="اضغط هنا لمشاهدة المزيد من المشاريع">شاهد المزيد</a>
             </div>
         </section>
+        <section class="hobbies p-20">
+            <div class="container">
+             <h1 class="sec-title">المفضلات</h1>
+             <div class="hobbies-holder">
+                 <div class="hobby sport">
+                     <div class="img-holder">
+                         <img src="./IMGS/me-doing-sport.jpg" alt="">
+                     </div>                    <div class="text" >
+                         <div class="holder">
+                             <h2>الرياضة</h2>
+                             <p>ممارست الرياضة عامة تشعرني بشعور عظيم و يساعدني على التخلص من المشاعر السلبية التي تصيب أي شخص من حين الى اخر. و خاصة ممارست كرة القدم فهي الرياضة المفضلة لي حيث أعشق ممارستها و كذلك متابعة مبارياتها. </p>
+                         </div>
+                     </div>
+                 </div>
+                 <div class="hobby photography">
+                     <div class="img-holder">
+                         <img src="./IMGS/photo-clouds-300-500.png" alt="">
+                     </div>
+                     <div class="text">
+                         <div class="holder">
+                             <h2>التصوير</h2>
+                             <p>التصوير يمكنني من التمتع  من ملكوت الخالق من مناظر طبيعية غاية من الجمال و كذا الاحتفاظ بها كصور. أنا لست محترف لكني أقضي وقتا رائعا مع كامرا هاتفي.</p>
+                         </div>
+                     </div>
+                 </div>
+                 <div class="hobby meditation">
+                     <div class="img-holder">
+                         <img src="./IMGS/my-pic-3.jpg" alt="">
+                     </div>                    <div class="text">
+                         <div class="holder">
+                             <h2>التأمل</h2>
+                             <p>التأمل واحد من أفضل الأشياء التي تساعدني على الهدوء و تفريغ عقلي من كل شيء محاولا اعطاؤه فرصة للاسترخاء.</p>
+                         </div>
+                     </div>
+                 </div>
+             </div>
+            </div>
+         </section>
     </main>
 </body>
 
