--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
                     front-end DEV
                 </div>
                 <div class="social-links mb-20">
-                    <a href="">
+                    <a href="https://www.facebook.com/profile.php?id=100010035220125" target="_blank">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
-                    <a href="">
+                    <a href="https://www.instagram.com/oussama_talib.8/" target="_blank">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="">
+                    <a href="https://www.youtube.com/@OussamaTalib.GameOver/featured" target="_blank">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
                 </div>
@@ -156,6 +156,44 @@
                 <a class="projects-more-btn btn-shape w-fit mr-auto ml-auto d-block " href="project-page.html" title="Click This To See More Projects">see
                     more</a>
             </div>
+        </section>
+        <section class="hobbies p-20">
+           <div class="container">
+            <h1 class="sec-title">favourites</h1>
+            <div class="hobbies-holder">
+                <div class="hobby sport">
+                    <div class="img-holder">
+                        <img src="./IMGS/me-doing-sport.jpg" alt="">
+                    </div>                    <div class="text" >
+                        <div class="holder">
+                            <h2>sport</h2>
+                            <p>generally playing sports makes me great and it helps me get rid of negative feelings. especially playing football it is my favorite sport I am adoring it through playing it and also watching football matches.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="hobby photography">
+                    <div class="img-holder">
+                        <img src="./IMGS/photo-clouds-300-500.png" alt="">
+                    </div>
+                    <div class="text">
+                        <div class="holder">
+                            <h2>photography</h2>
+                            <p>photography not only helps me enjoying with the beauty of this earth but also stays as photos. I am not a professional but I was enjoying when I am using my camera phone.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="hobby meditation">
+                    <div class="img-holder">
+                        <img src="./IMGS/my-pic-3.jpg" alt="">
+                    </div>                    <div class="text">
+                        <div class="holder">
+                            <h2>meditation</h2>
+                            <p>meditation is one of the best things which helps me to calm down and mentally dump from everything I am trying to give rest.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+           </div>
         </section>
     </main>
 </body>
