--- a/index-ar.html
+++ b/index-ar.html
@@ -148,7 +148,9 @@
                  <div class="hobby sport">
                      <div class="img-holder">
                          <img src="./IMGS/me-doing-sport.jpg" alt="">
-                     </div>                    <div class="text" >
+                     </div>                    
+                     <div class="text" >
+                        <i class="fa-solid fa-soccer-ball p-abs"></i>
                          <div class="holder">
                              <h2>الرياضة</h2>
                              <p>ممارست الرياضة عامة تشعرني بشعور عظيم و يساعدني على التخلص من المشاعر السلبية التي تصيب أي شخص من حين الى اخر. و خاصة ممارست كرة القدم فهي الرياضة المفضلة لي حيث أعشق ممارستها و كذلك متابعة مبارياتها. </p>
@@ -160,6 +162,7 @@
                          <img src="./IMGS/photo-clouds-300-500.png" alt="">
                      </div>
                      <div class="text">
+                        <i class="fa-solid fa-soccer-ball p-abs"></i>
                          <div class="holder">
                              <h2>التصوير</h2>
                              <p>التصوير يمكنني من التمتع  من ملكوت الخالق من مناظر طبيعية غاية من الجمال و كذا الاحتفاظ بها كصور. أنا لست محترف لكني أقضي وقتا رائعا مع كامرا هاتفي.</p>
@@ -169,7 +172,9 @@
                  <div class="hobby meditation">
                      <div class="img-holder">
                          <img src="./IMGS/my-pic-3.jpg" alt="">
-                     </div>                    <div class="text">
+                     </div>                    
+                     <div class="text">
+                        <i class="fa-solid fa-soccer-ball p-abs"></i>
                          <div class="holder">
                              <h2>التأمل</h2>
                              <p>التأمل واحد من أفضل الأشياء التي تساعدني على الهدوء و تفريغ عقلي من كل شيء محاولا اعطاؤه فرصة للاسترخاء.</p>
