--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
                 <div class="hobby sport">
                     <div class="img-holder">
                         <img src="./IMGS/me-doing-sport.jpg" alt="">
-                    </div>                    <div class="text" >
+                    </div>                    
+                    <div class="text" >
+                        <i class="fa-solid fa-soccer-ball p-abs"></i>
                         <div class="holder">
                             <h2>sport</h2>
                             <p>generally playing sports makes me great and it helps me get rid of negative feelings. especially playing football it is my favorite sport I am adoring it through playing it and also watching football matches.</p>
@@ -176,6 +178,7 @@
                         <img src="./IMGS/photo-clouds-300-500.png" alt="">
                     </div>
                     <div class="text">
+                        <i class="fa-solid fa-camera-alt p-abs"></i>
                         <div class="holder">
                             <h2>photography</h2>
                             <p>photography not only helps me enjoying with the beauty of this earth but also stays as photos. I am not a professional but I was enjoying when I am using my camera phone.</p>
@@ -185,7 +188,9 @@
                 <div class="hobby meditation">
                     <div class="img-holder">
                         <img src="./IMGS/my-pic-3.jpg" alt="">
-                    </div>                    <div class="text">
+                    </div>                    
+                    <div class="text">
+                        <i class="fa-solid fa-eye p-abs"></i>
                         <div class="holder">
                             <h2>meditation</h2>
                             <p>meditation is one of the best things which helps me to calm down and mentally dump from everything I am trying to give rest.</p>
