--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <h1>oussama et-talib</h1>
                 </div>
                 <div class="domain mb-20 fw-700">
+                    <i class="fa-solid fa-code c-blue"></i>
                     front-end DEV
                 </div>
                 <div class="social-links mb-20">
