--- a/index-ar.html
+++ b/index-ar.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
     content="OT  الموفع الرسمي الخاص بأسامة الطالب على الأنترنيت الذي يحتوي على كل المعلومات الخاصة به, مشاريعه, خدماته, مهاراته, و خبرته في الحياة و الأعمال..">
+    <link rel="shortcut icon" href="./IMGS/ot-favicon.png" type="image /x-icon">
     <!-- GOOGLE FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
