--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         content="OT Is The Official Personnal Website For OUSSAMA ET-TALIB On 
         The Web Which Have All Of Imformation About OUSSAMA, His Projects, 
         Services, Skills, And His life and bussiness Experience.">
+        <link rel="shortcut icon" href="./IMGS/ot-favicon.png" type="image /x-icon">
     <!-- GOOGLE FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
