--- a/index.html
+++ b/index.html
@@ -32,11 +32,73 @@
                 <div class="nav-icon flex-center">
                     <i class="fa-solid fa-navicon"></i>
                 </div>
-                <ul class="flex-center main-transition">
+                <ul class="mainUl flex-center main-transition">
                     <li><a href="#">home</a></li>
                     <li><a href="#projects">projects</a></li>
                     <li><a href="#services">services</a></li>
                     <li><a href="#about">about</a></li>
+                    <li><a class="mega-menu-parent" href="#"><i class="fa-solid fa-ellipsis fs-18"></i></a>
+                        <div class="mega-menu p-abs">
+                            <!-- <h2 class="full-w txt-center text-capa">more links</h2> -->
+                            <img src="./IMGS/mega-menu-img.png" alt="mega-menu-img">
+                            <ul class="mega-menu-links">
+                                <div class="links-column">
+                                    <li><a href="#favourites">
+                                            <i class="fa-solid fa-star fs-18 mr-10"></i>
+                                            favourites
+                                        </a>
+                                    </li>
+                                    <li><a href="#favourites">
+                                            <i class="fa-solid fa-circle-check fs-18 mr-10"></i>
+                                            my skills
+                                        </a>
+                                    </li>
+                                    <li><a href="#favourites">
+                                            <i class="fa-solid fa-star fs-18 mr-10"></i>
+                                            favourites
+                                        </a>
+                                    </li>
+                                    <li><a href="#favourites">
+                                            <i class="fa-solid fa-star fs-18 mr-10"></i>
+                                            favourites
+                                        </a>
+                                    </li>
+                                    <li><a href="#favourites">
+                                            <i class="fa-solid fa-star fs-18 mr-10"></i>
+                                            favourites
+                                        </a>
+                                    </li>
+                                </div>
+                                <div class="links-column">
+                                    <li><a href="#favourites">
+                                        <i class="fa-solid fa-star fs-18 mr-10"></i>
+                                        favourites
+                                    </a>
+                                </li>
+                                <li><a href="#favourites">
+                                        <i class="fa-solid fa-star fs-18 mr-10"></i>
+                                        favourites
+                                    </a>
+                                </li>
+                                <li><a href="#favourites">
+                                        <i class="fa-solid fa-star fs-18 mr-10"></i>
+                                        favourites
+                                    </a>
+                                </li>
+                                <li><a href="#favourites">
+                                        <i class="fa-solid fa-star fs-18 mr-10"></i>
+                                        favourites
+                                    </a>
+                                </li>
+                                <li><a href="#favourites">
+                                        <i class="fa-solid fa-star fs-18 mr-10"></i>
+                                        favourites
+                                    </a>
+                                </li>
+                                </div>
+                            </ul>
+                        </div>
+                    </li>
                 </ul>
             </nav>
             <div class="header-btns p-abs d-flex">
@@ -159,7 +221,7 @@
                     more</a>
             </div>
         </section>
-        <section class="hobbies p-20">
+        <section class="hobbies p-20" id="favourites">
            <div class="container">
             <h1 class="sec-title">favourites</h1>
             <div class="hobbies-holder">
